# yalaa

./: CLAUDE.md  CMakeLists.txt  ChangeLog  Dockerfile  Doxyfile  Makefile.am  Makefile.in  README.md  aminclude.am  build-mk.sh  config.h.in  configure  configure.ac  create_debug.sh  create_debug.sh~  create_release.sh  create_release.sh~  create_standard.sh  create_standard.sh~  libtool  trunk.sln  trunk.vcxproj  trunk.vcxproj.filters
Doku/: Makefile  aff_deko.org  affinecombination.dia  affinepolicy.dia  arithmeticerror.dia  arithmetickernel.dia  beweis_arcsin.org  errorpol.dia  errorterm.dia  intmacros.sty  p1788.org  struktur.dia  yalaa.tex  yalaa_swim_abstract.tex
build-files/: extra_inc.mk  src_files.mk
cmake/: FindCXSC.cmake  FindFILIB.cmake  FindPROFIL_BIAS.cmake  yalaa-config.h.in  yalaaConfig.cmake.in
demo/: demo.vcxproj  demo.vcxproj.filters
doc/: next-steps.md
examples/: CMakeLists.txt  Makefile.am  abs.cpp  decorations.cpp  function.cpp  polarity.cpp  policies.cpp
m4/: ac_compile_stdcxx_0x.m4  axx_ext_have_header_sk.m4  boost.m4  cxsc.m4  search_header.m4
src/: CMakeLists.txt  Makefile.am  affineform.hpp  affineform.inl  affineform_double.hpp  affineform_double.inl  affineform_fwd.hpp  config_sel.h  config_w32.h  errortermimpl.hpp  errortermimpl.inl  intervaladapt_old  main.cpp  special_forms.hpp  yalaa.cpp  yalaa.hpp  yalaa_assert.hpp  yalaa_fp_impl.cpp  yalaa_fwd.hpp  yalaa_ios.hpp  yalaa_iv.hpp
src/comb/: affinecombbaseimpl.cpp  affinecombbaseimpl.hpp  affinecombimpl.cpp  affinecombimpl.hpp  affinecombopimpl.cpp  affinecombopimpl.hpp  affinecombopimpl.inl
src/concepts/: affinecombination.hpp  affinepolicy.hpp  arithmetickernel.hpp  errorpolicy.hpp  errorterm.hpp
src/details/: has_trait.hpp
src/helper/: fastia.hpp  fphelper.cpp  fphelper.hpp  ia_aa.hpp  ivhelper_cpp  ivhelper_hpp
src/kernel/: arithmeticerror.hpp  arithmeticerror.inl  exacterror.cpp  exacterror.hpp
src/kernel/aff/: exacterroraffinefp.cpp  exacterroraffinefp.hpp
src/kernel/nonaff/: chebyshevfp.cpp  chebyshevfp.hpp  minrangefp.cpp  minrangefp.hpp  miscfp.cpp  miscfp.hpp  mulfp.cpp  mulfp.hpp
src/pol/: af0.hpp  af0.inl  af1.hpp  af1.inl  af2.hpp  af2.inl  errorpol.hpp  errorpoldec.hpp  errorpoldec.inl  errorpolstd.hpp  errorpolstd.inl
src/tests/: ftmeta.cpp  ftmeta.hpp  test_main.cpp
src/traits/: base_traits.hpp  custom_iv_traits.hpp  cxsc_traits.hpp  double_traits.hpp  filib_traits.hpp  float_traits.hpp  interval_traits.hpp  l_double_traits.hpp  profil_traits.hpp
