ACLOCAL_AMFLAGS = -I m4
include $(top_srcdir)/aminclude.am

if CXSC
IV_CPPFLAGS = $(CXSC_CPPFLAGS)
IV_FLAGS = $(CXSC_LIBS)
endif

if FILIB
IV_CPPFLAGS = $(FILIB_FLAGS)
IV_FLAGS = $(FILIB_LDFLAGS)
IV_LIBS = $(FILIB_LIBS)
endif

AM_CPPFLAGS = $(EXTRA_INC) $(IV_CPPFLAGS) $(BOOST_CPPFLAGS)
export IV_LIBS
export IV_FLAGS
export AM_CPPFLAGS

SUBDIRS = src examples
EXTRA_DIST = Doxyfile
